<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id = "@+id/stocks"
        android:icon="@drawable/stocks_icon"
        android:title="@string/stocks"
        android:orderInCategory="2"/>
    <item
        android:id = "@+id/crypto"
        android:icon="@drawable/cryptocurrency_icon"
        android:title="@string/cryptocurrency"
        android:orderInCategory="3"/>
    <item
        android:id = "@+id/bonds"
        android:icon="@drawable/baseline_money_24"
        android:title="@string/bonds"
        android:orderInCategory="4"/>
    <item
        android:id = "@+id/assets"
        android:icon="@drawable/all_assets_icon"
        android:title="@string/all_assets"
        android:orderInCategory="1"/>
</menu>